{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 30,
  "lineage": "57c2ba05-6837-82c1-2036-776bb5ff6e2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tekever",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04842bc62789b682e",
            "arn": "arn:aws:ec2:eu-west-2:456940189458:instance/i-0f3cd83f0e676c696",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3cd83f0e676c696",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tekever_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f21e6201a5c01321",
            "private_dns": "ip-10-0-1-137.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-3-8-101-187.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.101.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b11c6cf1a5d1853",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b9ef7824774db7d",
            "tags": {
              "Name": "Tekever"
            },
            "tags_all": {
              "Name": "Tekever"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f936a54c5e7f0bb"
            ]
          },
          "dependencies": [
            "aws_key_pair.tekever-aws",
            "aws_security_group.tekever-SG",
            "aws_subnet.tekever-pub-1",
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tekever-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:internet-gateway/igw-034c739b06de98f70",
            "id": "igw-034c739b06de98f70",
            "owner_id": "456940189458",
            "tags": {
              "Name": "tekever-GW"
            },
            "tags_all": {
              "Name": "tekever-GW"
            },
            "vpc_id": "vpc-04e50f56c72b472eb"
          },
          "dependencies": [
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tekever-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:route-table/rtb-002c7f6108a22aff3",
            "id": "rtb-002c7f6108a22aff3",
            "owner_id": "456940189458",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-034c739b06de98f70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tekever-pub-RT"
            },
            "tags_all": {
              "Name": "tekever-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e50f56c72b472eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tekever-GW",
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tekever-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062bbbd4b45466316",
            "route_table_id": "rtb-002c7f6108a22aff3",
            "subnet_id": "subnet-02b9ef7824774db7d"
          },
          "dependencies": [
            "aws_internet_gateway.tekever-GW",
            "aws_route_table.tekever-pub-RT",
            "aws_subnet.tekever-pub-1",
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tekever-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:security-group/sg-08f936a54c5e7f0bb",
            "description": "Tekever Security Group for SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f936a54c5e7f0bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "2.83.233.137/32"
                ],
                "description": "Allow SSH connection",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tekever-SG",
            "name_prefix": "",
            "owner_id": "456940189458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tekever-SG"
            },
            "tags_all": {
              "Name": "Tekever-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e50f56c72b472eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tekever-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:subnet/subnet-096bfc2603cb5ed4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096bfc2603cb5ed4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456940189458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tekever-priv-1"
            },
            "tags_all": {
              "Name": "tekever-priv-1"
            },
            "vpc_id": "vpc-04e50f56c72b472eb"
          },
          "dependencies": [
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tekever-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:subnet/subnet-02b9ef7824774db7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b9ef7824774db7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456940189458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tekever-pub-1"
            },
            "tags_all": {
              "Name": "tekever-pub-1"
            },
            "vpc_id": "vpc-04e50f56c72b472eb"
          },
          "dependencies": [
            "aws_vpc.tekever"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tekever",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:456940189458:vpc/vpc-04e50f56c72b472eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06354f8ba03484c5e",
            "default_route_table_id": "rtb-017535834019eca68",
            "default_security_group_id": "sg-04be2538e12be0ea7",
            "dhcp_options_id": "dopt-0e2d172108f84396a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04e50f56c72b472eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017535834019eca68",
            "owner_id": "456940189458",
            "tags": {
              "Name": "tekever"
            },
            "tags_all": {
              "Name": "tekever"
            }
          }
        }
      ]
    }
  ]
}